fixed cards border shadow, aligned buttons color + hover, added text shadow to all titles and aligned transitions across all css

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   scroll-behavior: smooth;
 }
 
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,40 +10,10 @@
   font-family: 'PT Sans', sans-serif;
 }
 
-.home,
-.about,
-.projects,
-.contact {
+.home {
   display: flex;
   height: 90vh;
   align-items: center;
   justify-content: center;
   font-size: 3rem;
-}
-
-.about {
-  background-image: url('./images/img-2.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: var(--primary);
-  font-size: 100px;
-}
-
-.projects {
-  background-image: url('./images/img-1.jpg');
-  background-position: center;
-  background-size: fill;
-  background-repeat: no-repeat;
-  color: var(--primary);
-  font-size: 100px;
-}
-
-.contact {
-  background-image: url('./images/img-8.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: var(--primary);
-  font-size: 100px;
 }
