--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -15,6 +15,7 @@
   background-color: var(--primary);
   color: #242424;
   border: 1px solid var(--primary);
+  border-radius: 3px;
 }
 
 .btn--outline {
@@ -23,17 +24,20 @@
   padding: 8px 20px;
   border: 1px solid var(--primary);
   transition: all 0.3s ease-out;
+  border-radius: 3px;
 }
 
 .btn--medium {
   padding: 8px 20px;
   font-size: 18px;
   cursor: pointer;
+  border-radius: 3px;
 }
 
 .btn--large {
   padding: 12px 26px;
   font-size: 20px;
+  border-radius: 3px;
 }
 
 .btn--large:hover,
@@ -41,9 +45,10 @@
 .btn:hover,
 .btn--outline:hover,
 .btn--primary:hover {
-  transition: all 0.2s ease-out;
+  transition: all 0.3s ease-in-out;
   background: var(--primary);
-  color: var(--secondary);
+  color: black;
+  text-shadow: none;
   opacity: 0.9;
   transform: scale(1.03);
 }
