--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -33,7 +33,8 @@
 }
 
 .hero-btns a {
-  color: rgb(120,76,100);
+  color: rgb(14 22 23);
+  text-shadow: 1px 1px #c8ecec;
   cursor: pointer;
   text-decoration: none;
 }
