--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -32,7 +32,7 @@
 
 .navbar-logo:hover .fa-laptop-code {
   color: #cdecf3;
-  transition: 0.7s;
+  transition: 0.7s ease-in-out;
   transform: scale(1.2) rotateY(360deg);
   text-shadow: none;
 }
@@ -69,8 +69,9 @@
 }
 
 .nav-links:hover {
-  border-bottom: 4px solid #fff;
-  transition: all 0.2s ease-out;
+  color: #cdecf3;
+  transition: all 0.2s ease-in-out;
+  transform: scale(1.05);
 }
 
 .fa-bars {
